--- a/Year 2 Fall/ACCT1101/pages/concepts.tex
+++ b/Year 2 Fall/ACCT1101/pages/concepts.tex
@@ -59,3 +59,28 @@
     $i$ is the interest rate.
     The ratio is the present value factor from the \href{https://www.double-entry-bookkeeping.com/wp-content/uploads/present-value-annuity-tables-v-1.0.jpg}{present value annuity tables}.
 \end{theorem}
+
+\subsection{Mid-term / exam formats}
+
+Mid-terms:
+\begin{itemize}
+    \item MC questions
+    \item Short problem-solving questions that focuses on a single concept usually
+    \item Prepare a statement (balance sheet / income statement)
+    \item Calculate ratios either one: (liquidity + NPM + Fixed-asset turnover)
+\end{itemize}
+
+Finals:
+\begin{itemize}
+    \item 1- 5 MC - 20 marks in total
+    \item 5 Problem solving - Shorter than assignments, longer than mid-terms (subparts)
+    \item 1 Short essay question\\
+          Concept centric questions, on accounting concept that covered in class, such as:
+          \begin{itemize}
+              \item why are there multiple inventory costing methods
+              \item what are the results from different inventory costing methods
+              \item financial statements - what are they trying to show
+              \item different kinds of depreciation methods - when straight line, when double decline method etc.
+          \end{itemize}
+          Around 100 - 300 words. They wouldn't be related to the ratios / financial statement analysis.
+\end{itemize}
