--- a/Year 2 Fall/ACCT1101/pages/trial.tex
+++ b/Year 2 Fall/ACCT1101/pages/trial.tex
@@ -189,7 +189,7 @@ Hence, there will be \textit{4 titles} for the adjusting entries as follows, alo
 \subsection{Depreciation}
 \label{subsec:depreciation}
 
-\subsubsection{Recording as adjustijng entry}
+\subsubsection{Recording as adjusting entry}
 
 \begin{definition}
     {Depreciation}
@@ -245,13 +245,13 @@ Before calculation, you need to identify \textit{some} of the following quantiti
     {Depreciation estimation methods}
     \begin{tabular}{|p{0.2\textwidth}|p{0.3\textwidth}|p{0.3\textwidth}|}
         \hline
-        \textit{Method}          & \textit{Formula}                                 & \textit{Per period}                        \\
+        \textit{Method}          & \textit{Formula}                            & \textit{Per period}                        \\
         \hline
-        Straight-line            & \[\frac{C - RV}{UL}\]                            & Constant amount each period.               \\
+        Straight-line            & \[\frac{C - RV}{UL}\]                       & Constant amount each period.               \\
         \hline
-        Units-of-production      & \[\left( \frac{C - RV}{P_T} \right) \times P_A\] & Based on production level.                 \\
+        Units-of-production      & \[(C - RV)\times\frac{P_A}{P_T}\]           & Based on production level.                 \\
         \hline
-        Double-declining balance & \[2 \times \left( \frac{C - AD}{UL} \right)\]    & Double the straight-line rate each period. \\
+        Double-declining balance & \[2 \times \text{Straight line} \times AD\] & Double the straight-line rate each period. \\
         \hline
     \end{tabular}
 \end{theorem}
