--- a/Year 2 Fall/COMP2119/COMP2119 Notes.tex
+++ b/Year 2 Fall/COMP2119/COMP2119 Notes.tex
@@ -5,6 +5,7 @@
 % ------------------------------------ %
 
 \usepackage{../../LaTeX-Preamables/Clean}
+\usepackage{algpseudocode}
 \usetikzlibrary{trees}
 \newcommand{\documentdate}{Fall 2025}
 \newcommand{\documenttype}{Notes for HKU}
@@ -20,6 +21,7 @@
 % ------------------------------------ %
 
 \newpage
+\hypertarget{toc}{}
 \tableofcontents
 \newpage
 
@@ -32,6 +34,7 @@
 \include{pages/structures}
 \include{pages/search}
 \include{pages/sort}
+\include{pages/huffman}
 \include{pages/questionBank}
 
 
