--- a/Year 2 Fall/IIMT2601/pages/econ.tex
+++ b/Year 2 Fall/IIMT2601/pages/econ.tex
@@ -1,53 +1,33 @@
-
-\section{Digital Economy}
-
-Digital economy can be thought of as the economy that is based on the internet and digital technologies.
+\section{E-Commerce}
 
 \begin{definition}
-    {Types of digital economy}
+    {Types of e-commerce}
+    Business, Customers
     \begin{itemize}
-        \item \textbf{E-commerce}: Digital enabling of commercial transactions
-              \\      \textit{Examples: Online shopping, mobile banking etc.}
-        \item \textbf{E-business}: The use of the internet to conduct business activities, such as marketing, sales, and customer service.
-              \\      \textit{Examples: Online marketing, online sales, online customer service etc.}
+        \item B2C - (Nike)
+        \item B2B - Typically on a \underline{wholesale} level (Apple buying batteries from Samsung)
+        \item C2C - Carousell
+        \item C2B - Freelancer, shutterstock
     \end{itemize}
 \end{definition}
 
-\subsection{Key characteristics}
+\begin{knBox}
+    {O2O - Online to Offline}
+    Purchase for items or services online, but consume offline. Typically involves a brick-and-mortar store.
 
-\subsubsection{Data integration to the product process}
+    \textit{Examples: Openrice, klook, uber}
+\end{knBox}
 
-The traditional production process is as followed:
+\subsection{Platform economy}
+\label{subsec:platform}
 
-Design\quad\rightarrowfill\quad
-Raw Material\quad\rightarrowfill\quad
-Manufacturing\quad\rightarrowfill\quad
-Finished Product\quad\rightarrowfill\quad
-Consumer
+Platforms are sensitive to the \hyperref[def:network]{\textbf{network effect}}. The more users on the platform, the more valuable it is. This allows the platform to have a significant advantage, even when innovative entrants have better products.
 
-We can \textbf{monetize data} that we collect from the \textit{consumers} by analyzing it and apply in the processes during production.
-
-\subsubsection{Digital products}
-
-\begin{definition}
-    {Digital products}
-    Intangible goods that exist in digital forms. \textit{Examples: Software, music, databases, platforms \& services etc.}
-\end{definition}
-
-A digital good has the following distinctive characteristics:
-
-\begin{itemize}
-    \item \textbf{Zero marginal cost}: There is no cost to produce additional units of a digital good.
-    \item \textbf{Quality uncertainty}: Consumers cannot determine the value of digital goods before using it.
-\end{itemize}
-
-Some digital goods also increase in value the more people use it, known as \textbf{network goods}.
-
-\begin{definition}
-    {Types of network goods}
+\begin{knBox}
+    {Improve user retention}
     \begin{itemize}
-        \item \textbf{Homogeneous}: Users perform the same action. (e.g. Whatsapp)
-        \item \textbf{Two-side}: Distinct user groups (e.g. Carousell)
+        \item \textbf{Exclusivity}: Products cannot be accessed in other providers.
+        \item \textbf{Sunk cost}: Rewards from time and effort spent on platform
+        \item \textbf{Incompatibility}: Switching costs are high (e.g. learning, migration, etc.)
     \end{itemize}
-    The types of goods are usually \textbf{platforms}, and it's the role of the \textbf{platform owner} to design and manage the playfield.
-\end{definition}
+\end{knBox}
