--- a/Year 2 Fall/IIMT2601/pages/it.tex
+++ b/Year 2 Fall/IIMT2601/pages/it.tex
@@ -30,3 +30,5 @@
         \item \textbf{Information}: Data that has been processed and organized in a meaningful way.
     \end{itemize}
 \end{definition}
+
+\label{def:data}
