--- a/Year 2 Fall/IIMT2601/pages/model.tex
+++ b/Year 2 Fall/IIMT2601/pages/model.tex
@@ -1,144 +1,81 @@
-\section{Business models}
+\section{E-business models}
 
 A business model outlines how certain objectives are achieved, such as:
 
 \begin{itemize}
-    \item Value proposition
     \item Presence of business
-    \item Marketing strategy
     \item Revenue strategy
     \item Pricing strategy
-    \item Competitive environment
-    \item Management team
+    \item Value proposition
+    \item Competition
 \end{itemize}
 
-\subsection{Presence of business}
 
-We categorize the presence based on the level of physical / virtual presence.
+\begin{knBox}
+    {Presence of business}
+    We categorize the presence based on the level of physical / virtual presence.
 
-\begin{itemize}
-    \item Brick and mortar (offline)
-    \item Click and Brick (hybrid)
-    \item Click only (online)
-\end{itemize}
+    \begin{itemize}
+        \item Brick and mortar (offline)
+        \item Click and Brick (hybrid)
+        \item Click only (online)
+    \end{itemize}
+\end{knBox}
 
-\subsection{Revenue strategy}
+\begin{knBox}
+    {Revenue strategy}
+    Where does the revenue come from?
 
-Four common revenue strategies:
+    \begin{itemize}
+        \item Subscription
+        \item Transactional
+        \item Advertising
+        \item Traditional sales
+        \item Affiliate marketing (profit from referrals)
+    \end{itemize}
+\end{knBox}
 
-\begin{itemize}
-    \item Subscription
-    \item Transactional
-    \item Advertising
-    \item Traditional sales
-    \item Affiliate marketing (profit from referrals)
-\end{itemize}
 
-\subsection{Pricing strategy}
+\begin{knBox}
+    {Pricing strategy}
+    How are the products priced?
 
-Common pricing strategies in digital economy:
-\begin{itemize}
-    \item Freemium
-          \begin{itemize}
-              \item Combines "free" and "premium" features
-              \item Basic features free, premium features paid
-              \item Examples: YouTube, In-app purchases
-          \end{itemize}
-    \item Free trial
-          \begin{itemize}
-              \item Limited time test before purchase
-              \item Common among software products
-          \end{itemize}
-\end{itemize}
+    \begin{itemize}
+        \item Versioning - Multiple versions (e.g. professional, student)
+        \item Bundling - Cheaper at bulk
+        \item Freemium - Basic free, premium paid
+        \item Free trial - Limited time test before purchase
+    \end{itemize}
+\end{knBox}
 
-\subsection{Value proposition}
+\begin{theorem}
+    {Long tail strategy}
+    \begin{itemize}
+        \item Profit from selling many low-volume, unique items rather than few high-volume items
+        \item Particularly effective in e-commerce where:
+              \begin{itemize}
+                  \item No physical inventory limitations
+                  \item Items easily discoverable online
+                  \item Helps compete in crowded markets
+              \end{itemize}
+    \end{itemize}
+\end{theorem}
 
-\begin{itemize}
-    \item Explains why customers should choose your business
-    \item Must demonstrate greater value than competitors
-    \item Key focus: market segments and product differentiation
-\end{itemize}
+\begin{theorem}
+    {Product differentiation}
+    \begin{itemize}
+        \item Vertical - By Standards
+        \item Horizontal - By Tastes
+    \end{itemize}
+\end{theorem}
 
-Types of products:
-\begin{itemize}
-    \item Mainstream products
-          \begin{itemize}
-              \item Broad consumer appeal
-              \item Serves mass market
-              \item Examples: Ikea, ParknShop, Facebook, WhatsApp
-          \end{itemize}
-    \item Niche products
-          \begin{itemize}
-              \item Specialized appeal
-              \item Serves specific market segments
-              \item Examples: Designer furniture, International ParknShop, TikTok, Discord
-          \end{itemize}
-\end{itemize}
-
-\subsection{Long tail strategy}
-
-\begin{itemize}
-    \item Profit from selling many low-volume, unique items rather than few high-volume items
-    \item Particularly effective in e-commerce where:
-          \begin{itemize}
-              \item No physical inventory limitations
-              \item Items easily discoverable online
-              \item Helps compete in crowded markets
-          \end{itemize}
-\end{itemize}
-
-\subsection{Product differentiation}
-
-\begin{itemize}
-    \item Vertical differentiation
-          \begin{itemize}
-              \item Universal preferences (better/faster is preferred)
-              \item Examples: Quality, CPU speed, RAM, security, resolution
-          \end{itemize}
-    \item Horizontal differentiation
-          \begin{itemize}
-              \item Based on individual taste
-              \item Examples: Color, style, flavor
-          \end{itemize}
-    \item Digital goods differentiation through:
-          \begin{itemize}
-              \item Security, resolution, genre
-              \item Business presence, pricing, revenue models
-          \end{itemize}
-\end{itemize}
-
-\subsection{Competition (Porter's Five Forces)}
-
-\begin{enumerate}
-    \item Rivalry among existing firms
-          \begin{itemize}
-              \item More competitors = less pricing power
-              \item Example: Amazon sellers vs Amazon itself
-          \end{itemize}
-
-    \item Threat of new entrants
-          \begin{itemize}
-              \item Lower entry barriers = greater threat
-              \item In digital economy, network effects often more important than costs
-              \item Examples: Apps vs Semiconductor industry
-          \end{itemize}
-
-    \item Bargaining power of buyers
-          \begin{itemize}
-              \item Many small customers = more pricing power
-              \item Examples: Content websites vs advertisers
-          \end{itemize}
-
-    \item Bargaining power of suppliers
-          \begin{itemize}
-              \item Fewer suppliers = more supplier power
-              \item Examples: Content providers vs platforms
-          \end{itemize}
-
-    \item Threat of substitutes
-          \begin{itemize}
-              \item Available substitutes weaken market position
-              \item Digital substitutes often less obvious
-              \item Examples: Twitter vs Newspapers, Netflix vs theaters
-          \end{itemize}
-\end{enumerate}
+\begin{theorem}
+    {Porter's Five Forces of Competition}
+    \begin{enumerate}
+        \item Rivalry among existing firms (no. of competitors)
+        \item Threat of new entrants (entry barriers)
+        \item Bargaining power of buyers (no. of buyers)
+        \item Bargaining power of suppliers (no. of suppliers)
+        \item Threat of substitutes (no. of alternatives)
+    \end{enumerate}
+\end{theorem}
