--- a/LaTeX-Preamables/Clean.sty
+++ b/LaTeX-Preamables/Clean.sty
@@ -12,6 +12,7 @@
 \usepackage{stringstrings}
 \usepackage{colortbl}
 \usepackage{listings, realboxes}
+\usepackage{fancyhdr} % top link pacakge
 
 \lstset{
     showspaces=false,
@@ -122,3 +123,10 @@
 \definecolor{superlightgray}{rgb}{0.9,0.9,0.9}
 
 \AddToHook{cmd/section/before}{\clearpage}
+
+
+% Makes it so each page has a back to top link on the right
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[R]{\hypersetup{linkcolor=gray}\hyperlink{toc}{Back to top}\hypersetup{linkcolor=blue}}
+\renewcommand{\headrulewidth}{0pt}
