--- a/Year 2 Fall/ACCT1101/ACCT1101 Notes.tex
+++ b/Year 2 Fall/ACCT1101/ACCT1101 Notes.tex
@@ -17,18 +17,18 @@
 \newcommand{\documenttype}{Notes for HKU}
 
 \newcommand\taccount[4][\tcolumnwidth]{% 
-  \renewcommand\arraystretch{1.333} % default value: 1
-  \setlength\tabcolsep{3pt}         % default value: 6pt
-  \setlength\taccountwidth{\dimexpr#1+#1+2\tabcolsep+1\arrayrulewidth\relax}
-  \begin{tabular}[t]{@{}l|l@{}}
+\renewcommand\arraystretch{1.333} % default value: 1
+\setlength\tabcolsep{3pt}         % default value: 6pt
+\setlength\taccountwidth{\dimexpr#1+#1+2\tabcolsep+1\arrayrulewidth\relax}
+\begin{tabular}[t]{@{}l|l@{}}
   \multicolumn{2}{>{\Centering}p{\taccountwidth}}{#2}\\
   \hline
   \begin{tabular}[t]{@{}>{\RaggedRight\hspace{0pt}}p{#1}} 
-  #3 \end{tabular} 
-  &
-  \begin{tabular}[t]{>{\RaggedRight\hspace{0pt}}p{#1}@{}} 
-  #4 \end{tabular}
-  \end{tabular}}
+    #3 \end{tabular} 
+    &
+    \begin{tabular}[t]{>{\RaggedRight\hspace{0pt}}p{#1}@{}} 
+      #4 \end{tabular}
+    \end{tabular}}
 
 % ------------------------------------ %
 %              Title page              %
@@ -41,6 +41,7 @@
 % ------------------------------------ %
 
 \newpage
+\hypertarget{toc}{}
 \tableofcontents
 \newpage
 
@@ -53,7 +54,7 @@
 \include{pages/trial}
 \include{pages/statement}
 \include{pages/closing}
-\include{pages/ratios}
+\include{pages/analyze}
 \include{pages/concepts}
 
 \section{Resources}
