--- a/Year 2 Fall/ACCT1101/pages/ratios.tex
+++ b/Year 2 Fall/ACCT1101/pages/ratios.tex
@@ -34,7 +34,7 @@
         \hline
         Inventory Turnover             & COGS : Inventory                                              & Efficiency in managing inventory.                                                     \\
         \hline
-        Average days to Sell Inventory & 365 : Inventory Turnover                                      & Number of days it takes to sell the inventory.                                        \\
+        Average days to Sell Inventory & 365 : Inventory Turnover Ratio                                & Number of days it takes to sell the inventory.                                        \\
         \hline
         Fixed Asset Turnover           & Net Sales : Fixed Assets                                      & Efficiency in using fixed assets.                                                     \\
         \hline
@@ -45,6 +45,18 @@
         Debt to Equity                 & Total Liabilities : Total Equity                              & Amount of debt per dollar of equity.                                                  \\
         \hline
         Time interest earned           & NI + Interest Expense + Income tax Expense : Interest Expense & Ability to meet interest payments.                                                    \\
+        \hline
+        Dividend yield                 & Dividend : Market price (per share)                           & Return on investment from dividends.                                                  \\
+        \hline
+        Price/Earnings                 & Market price : Earnings (per share)                           & Expected growth rate of earnings.                                                     \\
+        \hline
+        Return on Equity               & Net Income : Average Equity                                   & Every \textbf{equity dollar} generates $\underline{\hspace{1em}}$ \textbf{profit}.    \\
+        \hline
+        Quality of Income              & O Cash Flow : Net income                                      & Proportion of income in cash, ability to finance cash needs                           \\
+        \hline
+        Capital Acquisitions           & O Cash Flow : Equipment expense                               & (Inverse) need for outside financing for current and future expansions                \\
+        \hline
+        Cash coverage                  & O Cash Flow : Interest Expense                                & Cash from operations to meet interest payments                                        \\
         \hline
     \end{tabular}
 \end{table}
@@ -57,3 +69,11 @@ Answering framework:
     \item Interpretation of ratio
     \item Compare with industry / historical data, or state the lack of data
 \end{itemize}
+
+\begin{knBox}
+    {Free cash flow}
+    \[\text{O Cash flow} - \text{D} - \text{CapEx}\]
+    A measure of abiliy to pursue long-term investment opportunities.
+
+    CapEx is the capital expenditures, the amount spent on acquiring or maintaining property, plant, or equipment.
+\end{knBox}
