--- a/Year 2 Fall/COMP2119/pages/questionBank.tex
+++ b/Year 2 Fall/COMP2119/pages/questionBank.tex
@@ -73,6 +73,23 @@
 \end{example}
 
 \begin{example}
+    \label{eg:asym_3}
+    {Proving Big Theta notation} \ref{def:asym}
+
+    Consider $T(n)=4n^2$, to show that $T(n) \in \Theta(0.5n^2+10n+20)$:
+
+    We know that $T(n) \leq c_2 \cdot (0.5n^2 + 10n + 20)$ for $c_2 = 8$ easily.
+
+    Consider the lower bound:
+    \begin{align*}
+        4n^2          & \geq c_1 \cdot (0.5n^2 + 10n + 20) & \forall\ n \geq n_0                \\
+        n^2           & \geq 0.5n^2 + 10n + 20             & \forall\ n \geq n_0, c_1 = \frac14 \\
+        n^2 - 10n -20 & \geq 0                             & \forall\ n \geq n_0                \\
+    \end{align*}
+    Therefore we can simply take $n_0 = 10$ and $c_1 = \frac14, c_2=8$ to satisfy the definition of big Theta.
+\end{example}
+
+\begin{example}
     \label{eg:iasym_1}
     Identifying asymptotic growths \ref{thm:iasym}
 
@@ -129,3 +146,51 @@
     \end{center}
     Therefore the average is $\frac{(4+1+3+1+2)+(2+1+2+1+3)}{5\times 2} = 2$
 \end{example}
+
+\begin{example}
+    \label{eg:selection_sort}
+    Example of implementation of selection sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/selection_sort.Psuedocode}
+
+\begin{example}
+    \label{eg:bubble_sort}
+    Example of implementation of bubble sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/bubble_sort.Psuedocode}
+
+\begin{example}
+    \label{eg:insertion_sort}
+    Example of implementation of insertion sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/insertion_sort.Psuedocode}
+
+\begin{example}
+    \label{eg:heap_sort}
+    Example of implementation of heap sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/heap_sort.Psuedocode}
+
+\begin{example}
+    \label{eg:merge_sort}
+    Example of implementation of merge sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/merge_sort.Psuedocode}
+
+\begin{example}
+    \label{eg:quick_sort}
+    Example of implementation of quick sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/quick_sort.Psuedocode}
+
+\begin{example}
+    \label{eg:count_sort}
+    Example of implementation of count sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/count_sort.Psuedocode}
+
+\begin{example}
+    \label{eg:radix_sort}
+    Example of implementation of radix sort. \ref{subsec:sort_summary}
+\end{example}
+\lstinputlisting[language=python]{code/radix_sort.Psuedocode}
