--- a/Year 2 Fall/COMP2119/pages/search.tex
+++ b/Year 2 Fall/COMP2119/pages/search.tex
@@ -18,7 +18,7 @@ We will focus on searching algorithms on a \textbf{sorted list} in this section.
     \end{itemize}
     \textbf{Amount of comparisons} $=\frac{n}{\sqrt{n}} + \sqrt{n} - 1$
 
-    \textbf{Time complexity:} $\Theta(\sqrt{n}) O(\sqrt{n})$
+    \textbf{Time complexity:} $O(\sqrt{n})$
 \end{definition}
 
 \begin{definition}
@@ -30,7 +30,7 @@ We will focus on searching algorithms on a \textbf{sorted list} in this section.
         \item If the element is less than the target, search the right half
     \end{itemize}
 
-    \textbf{Time complexity:}  $\Theta(\log n) O(\log n)$
+    \textbf{Time complexity:}  $O(\log n)$
 
     Remember that the middle must be recalculated each time.
 \end{definition}
@@ -82,7 +82,7 @@ This is built upon the idea of binary search.
         \item In-order: left$\to$root$\to$right
         \item Post-order: left$\to$right$\to$root
     \end{itemize}
-    Where you access the root and \textbf{recursively} trasverse the left and right subtrees. When we consider trees, we always think recursively.
+    Where you access the root and \textbf{recursively} trasverse the left and right subtrees. When we consider trees, we always think recursively. These are all \textbf{DFS} methods.
 \end{theorem}
 
 To search for a node in a BST, we can simply captialized on the properties of the tree:
@@ -112,50 +112,46 @@ Remember, we always consider trees recursively.
 
 \begin{theorem}
     {Time complexities}
-    The time complexities for insert, search and delete in an AVL tree is $\Theta(\log n) O(\log n)$.
+    The time complexities for insert, search and delete in an AVL tree is $\Theta(\log n)$.
 \end{theorem}
 
 \begin{theorem}
     {Rotations}
-    We rotate the tree to fix imbalance during insertions and deletions.
+    After inserting a node to the correct position, or deleting a node, the tree may become unbalanced. We need to check for imbalance for each processed node and \textbf{rotate} the tree to fix it.
 
-    A rotation is done by \textbf{shifting the root} of a subtree to the left or right.
+    The following are two types of rotation:
 
     \begin{center}
         \begin{tabular}{|c|c|}
-            \textbf{\underline{L}eft Rotation} & \textbf{\underline{R}ight Rotation} \\
-            When: Right-heavy                  & When: Left-heavy                    \\
-            \hline
-            $B$: 2 -ve nodes from root         & $B$: 2 +ve nodes root               \\
-            shift root to \underline{R}        & shift root to \underline{L}         \\
-            \hline
+            \textbf{Left Rotation $\circlearrowleft$} & \textbf{Right Rotation $\circlearrowright$} \\
             \begin{tikzpicture}[baseline=(current bounding box.center)]
-                \node[circle, draw, minimum size=1cm]  {$1^{[-2]}$}
-                child {}
+                \node[circle, draw, minimum size=1cm, fill=green!30]  {$1^{[-2]}$}
+                child[missing]
                 child {node[circle, draw, minimum size=1cm]  {$2^{[-1]}$}
-                        child {}
+                        child {node {$\triangle$}}
                         child {node {$3^{[0]}$}}
                     };
-                \draw[->] (0,0.3) -- (1,0.3) node[midway, above] {root R};
+                \draw[->, bend right] (-0.5,-0.6) to (-0.3,-3);
             \end{tikzpicture}
             $\implies$
             \begin{tikzpicture}[baseline=(current bounding box.center)]
                 \node {2}
                 child {node {1}
+                        child[missing]
+                        child {node {$\triangle$}}
                     }
-                child {node {3}
-                    };
+                child {node {3}};
             \end{tikzpicture}
-                                               &
+                                                      &
 
             \begin{tikzpicture}[baseline=(current bounding box.center)]
-                \node[circle, draw, minimum size=1cm]  {$1^{[2]}$}
+                \node[circle, draw, minimum size=1cm, fill=green!30]  {$1^{[2]}$}
                 child {node[circle, draw, minimum size=1cm]  {$2^{[1]}$}
                         child {node {$3^{[0]}$}}
-                        child {}
+                        child {node {$\triangle$}}
                     }
-                child {};
-                \draw[->] (0,0.3) -- (-1,0.3) node[midway, above] {root L};
+                child[missing];
+                \draw[->, bend left] (0.5,-0.6) to (0.3,-3);
             \end{tikzpicture}
             $\implies$
             \begin{tikzpicture}[baseline=(current bounding box.center)]
@@ -163,60 +159,26 @@ Remember, we always consider trees recursively.
                 child {node {3}
                     }
                 child {node {1}
+                        child {node {$\triangle$}}
+                        child[missing]
                     };
             \end{tikzpicture}
         \end{tabular}
     \end{center}
 
-    For cases where $B$ is not 2 nodes of the same sign from root, we need to \textbf{consider the subtree} and perform a rotation on it, then rotate the root. This is a \textbf{double rotation}.
+    Notice that they are \textbf{mirrored} of each other.
 
-    \begin{center}
-        \begin{tabular}{|c|c|}
-            \textbf{R-L Rotation}                                      & \textbf{L-R Rotation}                                      \\
-            When: Right-left heavy                                     & When: Left-right heavy                                     \\
-            \hline
-            $B$: +ve node, -ve node                                    & $B$: -ve node, +ve node                                    \\
-            shift subtree root to \underline{L}, root to \underline{R} & shift subtree root to \underline{R}, root to \underline{L} \\
-            \hline
-            \begin{tikzpicture}[baseline=(current bounding box.center)]
-                \node {$1^{[-2]}$}
-                child {}
-                child {node[circle, draw, minimum size=1cm]  {$3^{[1]}$}
-                        child {node[circle, draw, minimum size=1cm]  {$2^{[0]}$}}
-                        child {}
-                    };
-                \draw[->] (1,-3.3) -- (0,-3.3) node[midway, below] {root L};
-            \end{tikzpicture}
-            $\implies$
-            \begin{tikzpicture}[baseline=(current bounding box.center)]
-                \node[circle, draw, minimum size=1cm]  {$1^{[-2]}$}
-                child {}
-                child {node[circle, draw, minimum size=1cm]  {$2^{[-1]}$}
-                        child {}
-                        child {node {$3^{[0]}$}}
-                    };
-                \draw[->] (0,0.3) -- (1,0.3) node[midway, above] {root R};
-            \end{tikzpicture}
-                                                                       &
-            \begin{tikzpicture}[baseline=(current bounding box.center)]
-                \node {$3^{[2]}$}
-                child {node[circle, draw, minimum size=1cm]  {$1^{[-1]}$}
-                        child {}
-                        child {node[circle, draw, minimum size=1cm]  {$2^{[0]}$}}
-                    }
-                child {};
-                \draw[->] (0,-3.3) -- (-1,-3.3) node[midway, below] {root R};
-            \end{tikzpicture}
-            $\implies$
-            \begin{tikzpicture}[baseline=(current bounding box.center)]
-                \node[circle, draw, minimum size=1cm]  {$1^{[2]}$}
-                child {node[circle, draw, minimum size=1cm]  {$2^{[1]}$}
-                        child {node {$3^{[0]}$}}
-                        child {}
-                    }
-                child {};
-                \draw[->] (0,0.3) -- (-1,0.3) node[midway, above] {root L};
-            \end{tikzpicture}
-        \end{tabular}
-    \end{center}
+    Consider the following conditions of balance for each processed node for rotations:
+    \begin{algorithmic}
+        \State $l \gets \text{node.left}$
+        \State $r \gets \text{node.right}$
+        \If{$B(node) > 1$}
+        \State \textbf{If} $B(l) < 0$: rotateLeft(l)
+        \State rotateRight(node)
+        \EndIf
+        \If{$B(node) < -1$}
+        \State \textbf{If} $B(r) > 0$: rotateRight(r)
+        \State rotateLeft(node)
+        \EndIf
+    \end{algorithmic}
 \end{theorem}
