--- a/Year 2 Fall/IIMT2601/IIMT2601 Notes.tex
+++ b/Year 2 Fall/IIMT2601/IIMT2601 Notes.tex
@@ -20,6 +20,8 @@
 
 \newpage
 \tableofcontents
+
+Note: Mid-term from chapter 1-3, finals from chapter 4 onwards. Might include prerequisite knowledge.
 \newpage
 
 % ------------------------------------ %
@@ -27,9 +29,11 @@
 % ------------------------------------ %
 
 \input{pages/it}
-\input{pages/econ}
+\input{pages/decon}
 \input{pages/infra}
 \input{pages/model}
-\input{pages/econ2}
+\input{pages/econ}
+\input{pages/social}
+\input{pages/data}
 
 \end{document}
